modules/vpc/igw.tf
# ------- Internet Gateway ---------
resource "aws_internet_gateway" "this" {
  vpc_id = aws_vpc.this.id
  tags = {
    Name : "${var.env}-ligtforth-igw"
  }
}
